# fastapi-web-chat

chat/: Dockerfile  alembic.ini  deploy.yml  docker-compose.yml  main.py  pyproject.toml
chat/alembic/: env.py
chat/alembic/versions/: 8266cba4c5ed_init2.py
chat/api/: auth.py  connectionManager.py  ws.py
chat/chat/: main.py
chat/database/: config.py  crud.py  db.py  models.py  service.py
